[metadata]
name = nene
description = Static site generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Leonardo Uieda
author_email = leouieda@gmail.com
maintainer = Leonardo Uieda
maintainer_email = leouieda@gmail.com
license = MIT
license-file = LICENSE.txt
platform = any
keywords = html
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Matplotlib
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
url = https://github.com/leouieda/nene
project_urls =
    Documentation = https://github.com/leouieda/nene
    Release Notes = https://github.com/leouieda/nene/releases
    Bug Tracker = https://github.com/leouieda/nene/issues
    Source Code = https://github.com/leouieda/nene

[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    myst-parser
    jinja2
    livereload

[flake8]
max-line-length = 88
application-import-names = nene
import-order-style = google
docstring-convention = numpy
exclude = doc build
select = A B C D E F H I M Q RST S T W B902
ignore = F405 W503 RST902
