[metadata]
name = nene
fullname = Nēnē
description = "A no-frills static site generator"
long_description = file: README.md
long_description_content_type = text/markdown
author = Leonardo Uieda
author_email = leouieda@gmail.com
license = MIT
license_file = LICENSE.txt
platform = any
keywords = html, markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: Markdown
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/leouieda/nene
project_urls =
    Documentation = https://github.com/leouieda/nene
    Release Notes = https://github.com/leouieda/nene/releases
    Bug Tracker = https://github.com/leouieda/nene/issues
    Source Code = https://github.com/leouieda/nene

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    myst-parser>=0.15.0
    jinja2>=3.0
    pyyaml>=5.4
    livereload>=2.6
    click>=8
    rich>=10.9

[options.extras_require]
dev =
    pytest
    twine
    wheel
lint =
    black
    isort
    flake8
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-continuation
    flake8-copyright
    flake8-isort
    flake8-mutable
    flake8-print
    flake8-quotes
    flake8-simplify
    flake8-rst-docstrings
    flake8-docstrings
    pydocstyle

[options.entry_points]
console_scripts =
    nene = nene.cli:main

[flake8]
max-line-length = 88
show-source = True
application-import-names = nene
docstring-convention = numpy
exclude = doc .eggs *.egg-info nene/_version.py build
select = A B C D E F G H I J K L M N O P Q R S T U V W X Y Z B902
inline-quotes = double
multiline-quotes = double
copyright-check = True
copyright-author = Leonardo Uieda
ignore =
    # Unknown interpreted text role "func"
    RST304
