[metadata]
name = nene
fullname = Nēnē
description = A no-frills static site generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Leonardo Uieda
author_email = leouieda@gmail.com
license = MIT
license_file = LICENSE.txt
platform = any
keywords = html, markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: Markdown
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://nene.leouieda.com
project_urls =
    Documentation = https://nene.leouieda.com
    Release Notes = https://github.com/leouieda/nene/releases
    Bug Tracker = https://github.com/leouieda/nene/issues
    Source Code = https://github.com/leouieda/nene

[options]
zip_safe = True
packages = find:
python_requires = >=3.6
install_requires =
    markdown-it-py>=2.0
    mdit-py-plugins>=0.3
    jinja2>=3.0
    pyyaml>=5.4
    livereload>=2.6
    click>=8
    rich>=10.9

[options.extras_require]
jupyter =
    nbformat

[options.entry_points]
console_scripts =
    nene = nene.cli:main

[flake8]
max-line-length = 88
show-source = True
application-import-names = nene
docstring-convention = numpy
exclude = doc .eggs *.egg-info nene/_version_generated.py nene/__init__.py build
select = A B C D E F G H I J K L M N O P Q R S T U V W X Y Z B902
inline-quotes = double
multiline-quotes = double
copyright-check = True
copyright-author = Leonardo Uieda
ignore =
    # Unknown interpreted text role "func"
    RST304
    # Using print
    T001
